# algo.cpp

./: CMakeLists.txt  LICENSE  README.md
.cache/clangd/index/: bubble.cpp.30F274DC96571D73.idx  horner.cpp.CAA87B53FF0205A4.idx  insertion.cpp.0FD23ECE461F29FE.idx  merge.cpp.A4B5BEB9C075B0AE.idx  select.cpp.DC47D0723EFE79FA.idx  sorting.hpp.3BBC58C8BBA289BC.idx
include/sorting/: sorting.hpp
src/: CMakeLists.txt
src/math/: CMakeLists.txt  horner.cpp
src/sorting/: CMakeLists.txt  bubble.cpp  insertion.cpp  merge.cpp  select.cpp
